--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Plain RPC (Remote Procedure Call) over Web socket",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no examples specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-prettier": "^4.0.0",
@@ -33,7 +32,7 @@
     "typescript": "^4.6.3"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": ">=16.x"
   },
   "files": [
     "dist",
