fix: Add types support. Add prebuilt for `CommonJS` and `ESM`

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ crashlytics-build.properties
 fabric.properties
 cmake-build-*/
 /node_modules
-/build
+/dist
 /.devbuild
 /.env
 /src/assets/public/apidoc
