--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
-        "outDir": "dist/cjs",
+        "outDir": "dist/esm",
         "declarationDir": "dist/types",
         "composite": true,
         "experimentalDecorators": true,
         "noImplicitAny": true,
         "sourceMap": true,
-        "module": "CommonJS",
+        "module": "ES2020",
         "target": "ES6",
         "lib": [
             "es6"
