--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,8 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist/esm",
-        "module": "esnext",
+        "outDir": "dist/cjs",
+        "module": "commonjs",
     },
     "include": [
         "src/**/*",
