--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -1,8 +1,9 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist/esm",
-        "module": "esnext",
+        "outDir": "dist/types",
+        "declaration": true,
+        "emitDeclarationOnly": true
     },
     "include": [
         "src/**/*",
