--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "prpcow",
-    "version": "1.1.3",
+    "version": "2.0.0-alpha.0",
     "description": "Plain RPC (Remote Procedure Call) over Web socket",
     "main": "./dist/esm/src/index.js",
     "types": "./dist/types/src/index.d.ts",
