fix: Fix build types

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
         "release": "npx standard-version",
         "pretest": "npm run build",
         "test": "cd tests && npm run test",
-        "prepublishOnly": "npm run build",
+        "prepublishOnly": "npm run build:clean",
         "build": "npm run build:cjs && npm run build:esm && npm run build:types",
+        "build:clean": "node scripts/clean.cjs && npm run build",
         "build:cjs": "tsc --project tsconfig.cjs.json",
         "build:esm": "tsc --project tsconfig.esm.json",
         "build:types": "tsc --project tsconfig.types.json",
