--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "dist/cjs",
+        "declarationDir": "dist/types",
         "module": "commonjs",
     },
     "include": [
