--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "dist/esm",
+        "declarationDir": "dist/types",
         "module": "esnext",
     },
     "include": [
