--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "url": "git+https://github.com/yeskiy/prpcow.git"
     },
     "dependencies": {
+        "brotli": "^1.3.3",
+        "brotli-wasm": "^1.3.1",
         "buffer": "^6.0.3",
         "events": "^3.3.0",
         "pure-uuid": "^1.6.3",
@@ -38,6 +40,7 @@
         "ws": "^8.5.0 || ^7.5.0"
     },
     "devDependencies": {
+        "@types/brotli": "^1.3.1",
         "@types/uuid": "^9.0.1",
         "@types/ws": "^8.5.4",
         "@typescript-eslint/eslint-plugin": "^5.51.0",
