feat: Changed way of generating default Classes; Add InvertedWeakMap; Code refactor; Uncomment and refine function cleanup test; Update LICENSE year; Updated Base Node and npm version to 18.x

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "outDir": "dist/cjs",
         "declarationDir": "dist/types",
-        "module": "commonjs",
+        "module": "commonjs"
     },
     "include": [
         "src/**/*",
