--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "prpcow",
     "version": "2.0.0-alpha.16",
     "description": "Plain RPC (Remote Procedure Call) over WebSocket",
+    "type": "module",
     "main": "./dist/esm/src/index.js",
     "types": "./dist/types/src/index.d.ts",
-    "type": "module",
     "exports": {
         "types": "./dist/types/src/index.d.ts",
         "require": "./dist/cjs/src/index.js",
@@ -12,7 +12,10 @@
         "default": "./dist/esm/src/index.js"
     },
     "scripts": {
-        "release": "npx standard-version",
+        "release": "npx standard-version -p alpha",
+        "release:jdi": "npx standard-version && npm run release:doPush",
+        "release:doPush": "git push --follow-tags origin main && npm run release:publish",
+        "release:publish": "npm publish",
         "pretest": "npm run build",
         "test": "cd tests && npm run test",
         "prepublishOnly": "npm run build:clean",
@@ -30,32 +33,35 @@
     "dependencies": {
         "buffer": "^6.0.3",
         "events": "^3.3.0",
-        "pure-uuid": "^1.6.3",
-        "semver": "^7.3.8",
-        "uuid": "^9.0.0"
+        "pure-uuid": "^1.8.1",
+        "semver": "^7.6.0",
+        "uuid": "^9.0.1"
     },
     "peerDependencies": {
         "ws": "^8.5.0 || ^7.5.0"
     },
     "devDependencies": {
-        "@types/brotli": "^1.3.1",
-        "@types/uuid": "^9.0.1",
-        "@types/ws": "^8.5.4",
-        "@typescript-eslint/eslint-plugin": "^5.57.0",
-        "@typescript-eslint/parser": "^5.57.0",
-        "eslint": "^8.37.0",
+        "@types/brotli": "^1.3.4",
+        "@types/uuid": "^9.0.8",
+        "@types/ws": "^8.5.10",
+        "@typescript-eslint/eslint-plugin": "^7.3.1",
+        "@typescript-eslint/parser": "^7.3.1",
+        "eslint": "^8.57.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-airbnb-typescript": "^17.0.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-jest": "^27.2.1",
-        "eslint-plugin-prettier": "^4.2.1",
-        "npm-check-updates": "^16.8.2",
-        "prettier": "^2.8.7",
-        "typescript": "^4.9.5"
+        "eslint-config-airbnb-typescript": "^18.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jest": "^27.9.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "npm-check-updates": "^16.14.17",
+        "typescript": "^5.4.3"
     },
     "engines": {
-        "node": ">=16.x"
+        "node": ">=18.18.2"
+    },
+    "volta": {
+        "node": "18.18.2",
+        "npm": "9.8.1"
     },
     "files": [
         "dist"
