--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "outDir": "dist/esm",
         "declarationDir": "dist/types",
-        "module": "esnext",
+        "module": "esnext"
     },
     "include": [
         "src/**/*",
