feat: Add SendError class and refactor function resolver
A new SendError class was added to handle specific error cases. The method setTheirs in weakFunctionPool.functionResolver.ts was also refactored for better error handling, including assigning the error.stack to any caught error. Additionally, a small correction was made to the release:doPush script in package.json, changing "main" to "master".

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "release": "npx standard-version -p alpha",
         "release:jdi": "npx standard-version && npm run release:doPush",
-        "release:doPush": "git push --follow-tags origin main && npm run release:publish",
+        "release:doPush": "git push --follow-tags origin master && npm run release:publish",
         "release:publish": "npm publish",
         "pretest": "npm run build",
         "test": "cd tests && npm run test",
